--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -17,7 +17,7 @@ social:
 - {icon: 'twitter', link:    'https://twitter.com/AlexZahnAudio'}
 - {icon: 'instagram', link:  'https://www.instagram.com/alexzahnaudio/'}
 - {icon: 'github', link:     'https://github.com/alexzahnaudio'}
-- {icon: 'itch-io', link:    'https://rocketsciencewins.itch.io/'}
+- {icon: 'gamepad', link:    'https://rocketsciencewins.itch.io/'}
 - {icon: 'envelope', link:   'mailto:alex@alexzahnaudio.com'}
 
 # Customize site text
