Update _config.yml - hide post share

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,8 @@ highlighter:         rouge
 permalink:           /:title
 plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
 
+hide_post_share:     true
+
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
 title:               "Alex Zahn Audio"
 description:         ""
